--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <button class="btn" onclick="newQuote()">Super Quote</button>
 
-        <script src="./resources/js/script.js"></script>
+        <script src="./js/script.js"></script>
     </main>
 </body>
 </html>
